# TheNightOps-GCP

./: .gitignore  CHANGELOG.md  CLAUDE.md  DEPLOY.md  Dockerfile  LICENSE  README.md  cloudbuild.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml  release.yml
adk_agents/thenightops_simple/: agent.py
config/: .env.example  nightops.yaml  remediation_policies.yaml
demo/: Dockerfile
demo/k8s_manifests/: cpu-spike-scenario.yaml  demo-app.yaml  memory-leak-scenario.yaml
demo/scenarios/: demo_app.py  scenarios.yaml
deploy/gke/: agent.yaml  configmap.yaml  dashboard.yaml  mcp-servers.yaml  namespace.yaml  secrets.yaml
docs/: AWS_EKS.md  CNAME  index.html
docs/assets/: script.js  style.css
monorepo/: README.md
scripts/: cleanup.sh  demo-gke.sh  demo-live.sh  demo-local.sh  docker-scout-scan.sh  generate-manifests.sh  run-local.sh  setup-gke.sh  test-scenarios.sh
src/: __init__.py  cli.py  init_wizard.py
src/agents/: __init__.py  anomaly_detector.py  communication_drafter.py  deployment_correlator.py  log_analyst.py  root_orchestrator.py  runbook_retriever.py  simple_agent.py
src/core/: __init__.py  autodiscovery.py  config.py  logging.py  models.py
src/dashboard/: ARCHITECTURE.md  README.md  SETUP.md  __init__.py  app.py  examples.py
src/dashboard/static/: nightops.js
src/dashboard/templates/: index.html
src/ingestion/: __init__.py  deduplication.py  event_watcher.py  webhook_receiver.py
src/intelligence/: __init__.py  incident_memory.py
src/mcp_servers/: __init__.py
src/mcp_servers/cloud_logging/: __init__.py  server.py
src/mcp_servers/kubernetes/: __init__.py  server.py
src/mcp_servers/notifications/: __init__.py  server.py
src/mcp_servers/slack/: __init__.py  server.py
src/metrics/: __init__.py  tracker.py
src/proactive/: __init__.py  scheduler.py
src/remediation/: __init__.py  policy_engine.py
tests/: __init__.py  test_agents.py  test_config.py  test_models.py  test_v2_features.py
